[gd_scene load_steps=9 format=3 uid="uid://30d2xt28h8m7"]

[ext_resource type="Script" uid="uid://diu0v3t8k7cdd" path="res://scripts/menu_personajes.gd" id="1_7raio"]
[ext_resource type="StyleBox" uid="uid://bme26medaoc2p" path="res://personaje estilo.tres" id="1_ob08y"]
[ext_resource type="StyleBox" uid="uid://brpe35kna72uk" path="res://personaje_hover.tres" id="2_qdrkg"]
[ext_resource type="AudioStream" uid="uid://c0xddrjep7dyj" path="res://soundd/Undertale OST_ 049 - It's Showtime!.mp3" id="4_qdrkg"]

[sub_resource type="InputEventKey" id="InputEventKey_u03wp"]
device = -1
keycode = 4194309

[sub_resource type="Shortcut" id="Shortcut_hhwv3"]
events = [SubResource("InputEventKey_u03wp")]

[sub_resource type="InputEventKey" id="InputEventKey_qdrkg"]
device = -1
keycode = 4194309

[sub_resource type="Shortcut" id="Shortcut_u03wp"]
events = [SubResource("InputEventKey_qdrkg")]

[node name="menu_personajes" type="Node2D"]
script = ExtResource("1_7raio")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.200239, 0.123571, 1, 1)

[node name="valenger" type="Button" parent="."]
offset_left = 321.0
offset_top = 290.0
offset_right = 391.0
offset_bottom = 360.0
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = ExtResource("1_ob08y")
theme_override_styles/disabled = ExtResource("1_ob08y")
theme_override_styles/hover = ExtResource("2_qdrkg")
theme_override_styles/pressed = ExtResource("1_ob08y")
theme_override_styles/normal = ExtResource("1_ob08y")
shortcut = SubResource("Shortcut_hhwv3")
text = "V"
metadata/_edit_use_anchors_ = true

[node name="beloved" type="Button" parent="."]
offset_left = 431.0
offset_top = 290.0
offset_right = 501.0
offset_bottom = 360.0
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = ExtResource("1_ob08y")
theme_override_styles/disabled = ExtResource("1_ob08y")
theme_override_styles/hover = ExtResource("2_qdrkg")
theme_override_styles/pressed = ExtResource("1_ob08y")
theme_override_styles/normal = ExtResource("1_ob08y")
shortcut = SubResource("Shortcut_hhwv3")
text = "B"

[node name="challenger" type="Button" parent="."]
offset_left = 541.0
offset_top = 290.0
offset_right = 611.0
offset_bottom = 360.0
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = ExtResource("1_ob08y")
theme_override_styles/disabled = ExtResource("1_ob08y")
theme_override_styles/hover = ExtResource("2_qdrkg")
theme_override_styles/pressed = ExtResource("1_ob08y")
theme_override_styles/normal = ExtResource("1_ob08y")
shortcut = SubResource("Shortcut_hhwv3")
text = "C"

[node name="archero" type="Button" parent="."]
offset_left = 651.0
offset_top = 290.0
offset_right = 721.0
offset_bottom = 360.0
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = ExtResource("1_ob08y")
theme_override_styles/disabled = ExtResource("1_ob08y")
theme_override_styles/hover = ExtResource("2_qdrkg")
theme_override_styles/pressed = ExtResource("1_ob08y")
theme_override_styles/normal = ExtResource("1_ob08y")
shortcut = SubResource("Shortcut_hhwv3")
text = "A"

[node name="petardium" type="Button" parent="."]
offset_left = 761.0
offset_top = 290.0
offset_right = 831.0
offset_bottom = 360.0
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = ExtResource("1_ob08y")
theme_override_styles/disabled = ExtResource("1_ob08y")
theme_override_styles/hover = ExtResource("2_qdrkg")
theme_override_styles/pressed = ExtResource("1_ob08y")
theme_override_styles/normal = ExtResource("1_ob08y")
shortcut = SubResource("Shortcut_hhwv3")
text = "Pe"

[node name="magica" type="Button" parent="."]
offset_left = 321.0
offset_top = 400.0
offset_right = 391.0
offset_bottom = 470.0
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = ExtResource("1_ob08y")
theme_override_styles/disabled = ExtResource("1_ob08y")
theme_override_styles/hover = ExtResource("2_qdrkg")
theme_override_styles/pressed = ExtResource("1_ob08y")
theme_override_styles/normal = ExtResource("1_ob08y")
shortcut = SubResource("Shortcut_hhwv3")
text = "M"

[node name="frozen" type="Button" parent="."]
offset_left = 431.0
offset_top = 400.0
offset_right = 501.0
offset_bottom = 470.0
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = ExtResource("1_ob08y")
theme_override_styles/disabled = ExtResource("1_ob08y")
theme_override_styles/hover = ExtResource("2_qdrkg")
theme_override_styles/pressed = ExtResource("1_ob08y")
theme_override_styles/normal = ExtResource("1_ob08y")
shortcut = SubResource("Shortcut_hhwv3")
text = "F"

[node name="rotato" type="Button" parent="."]
offset_left = 541.0
offset_top = 400.0
offset_right = 611.0
offset_bottom = 470.0
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = ExtResource("1_ob08y")
theme_override_styles/disabled = ExtResource("1_ob08y")
theme_override_styles/hover = ExtResource("2_qdrkg")
theme_override_styles/pressed = ExtResource("1_ob08y")
theme_override_styles/normal = ExtResource("1_ob08y")
shortcut = SubResource("Shortcut_hhwv3")
text = "Ro"

[node name="phase" type="Button" parent="."]
offset_left = 651.0
offset_top = 400.0
offset_right = 721.0
offset_bottom = 470.0
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = ExtResource("1_ob08y")
theme_override_styles/disabled = ExtResource("1_ob08y")
theme_override_styles/hover = ExtResource("2_qdrkg")
theme_override_styles/pressed = ExtResource("1_ob08y")
theme_override_styles/normal = ExtResource("1_ob08y")
shortcut = SubResource("Shortcut_hhwv3")
text = "Ph"

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = 654.0
offset_top = 399.0
offset_right = 753.0
offset_bottom = 406.0
rotation = 0.785398
color = Color(1, 0, 0, 1)

[node name="revenger" type="Button" parent="."]
offset_left = 761.0
offset_top = 400.0
offset_right = 831.0
offset_bottom = 470.0
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = ExtResource("1_ob08y")
theme_override_styles/disabled = ExtResource("1_ob08y")
theme_override_styles/hover = ExtResource("2_qdrkg")
theme_override_styles/pressed = ExtResource("1_ob08y")
theme_override_styles/normal = ExtResource("1_ob08y")
shortcut = SubResource("Shortcut_hhwv3")
text = "Re"
metadata/desc = "5 piques, despues de perder aumenta su fuerzaal activar la habilidad su poder aumenta aun mas pero la fuerza del enemigo se duplica por 2"

[node name="titulo" type="Label" parent="."]
offset_left = 434.0
offset_right = 698.0
offset_bottom = 69.0
theme_override_font_sizes/font_size = 50
text = "personajes"
horizontal_alignment = 1
vertical_alignment = 1

[node name="nombre" type="Label" parent="."]
offset_left = 347.0
offset_top = 152.0
offset_right = 435.0
offset_bottom = 180.0
theme_override_font_sizes/font_size = 20
text = "Valenger"

[node name="descripcion" type="Label" parent="."]
offset_left = 650.0
offset_top = 140.0
offset_right = 931.0
offset_bottom = 261.0
text = "3 piques, al usar la habilidad 
aumenta el rebote"

[node name="seguir" type="Button" parent="."]
offset_left = 456.0
offset_top = 536.0
offset_right = 696.0
offset_bottom = 616.0
theme_override_font_sizes/font_size = 40
disabled = true
shortcut = SubResource("Shortcut_u03wp")
shortcut_feedback = false
text = "SIGUIENTE
"
icon_alignment = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_qdrkg")
autoplay = true
parameters/looping = true

[connection signal="mouse_entered" from="valenger" to="." method="_button_mouse_entered" binds= [Vector2i(0, 0)]]
[connection signal="mouse_exited" from="valenger" to="." method="_button_mouse_exited"]
[connection signal="pressed" from="valenger" to="." method="_button_pressed"]
[connection signal="mouse_entered" from="beloved" to="." method="_button_mouse_entered" binds= [Vector2i(1, 0)]]
[connection signal="mouse_exited" from="beloved" to="." method="_button_mouse_exited"]
[connection signal="pressed" from="beloved" to="." method="_button_pressed"]
[connection signal="mouse_entered" from="challenger" to="." method="_button_mouse_entered" binds= [Vector2i(2, 0)]]
[connection signal="mouse_exited" from="challenger" to="." method="_button_mouse_exited"]
[connection signal="pressed" from="challenger" to="." method="_button_pressed"]
[connection signal="mouse_entered" from="archero" to="." method="_button_mouse_entered" binds= [Vector2i(3, 0)]]
[connection signal="mouse_exited" from="archero" to="." method="_button_mouse_exited"]
[connection signal="pressed" from="archero" to="." method="_button_pressed"]
[connection signal="mouse_entered" from="petardium" to="." method="_button_mouse_entered" binds= [Vector2i(4, 0)]]
[connection signal="mouse_exited" from="petardium" to="." method="_button_mouse_exited"]
[connection signal="pressed" from="petardium" to="." method="_button_pressed"]
[connection signal="mouse_entered" from="magica" to="." method="_button_mouse_entered" binds= [Vector2i(0, 1)]]
[connection signal="mouse_exited" from="magica" to="." method="_button_mouse_exited"]
[connection signal="pressed" from="magica" to="." method="_button_pressed"]
[connection signal="mouse_entered" from="frozen" to="." method="_button_mouse_entered" binds= [Vector2i(1, 1)]]
[connection signal="mouse_exited" from="frozen" to="." method="_button_mouse_exited"]
[connection signal="pressed" from="frozen" to="." method="_button_pressed"]
[connection signal="mouse_entered" from="rotato" to="." method="_button_mouse_entered" binds= [Vector2i(2, 1)]]
[connection signal="mouse_exited" from="rotato" to="." method="_button_mouse_exited"]
[connection signal="pressed" from="rotato" to="." method="_button_pressed"]
[connection signal="mouse_entered" from="phase" to="." method="_button_mouse_entered" binds= [Vector2i(3, 1)]]
[connection signal="mouse_exited" from="phase" to="." method="_button_mouse_exited"]
[connection signal="pressed" from="phase" to="." method="_button_pressed"]
[connection signal="mouse_entered" from="revenger" to="." method="_button_mouse_entered" binds= [Vector2i(4, 1)]]
[connection signal="mouse_exited" from="revenger" to="." method="_button_mouse_exited"]
[connection signal="pressed" from="revenger" to="." method="_button_pressed"]
[connection signal="pressed" from="seguir" to="." method="_on_seguir_pressed"]
